[package]
authors = ["Michael Lodder <redmike7@gmail.com>"]
categories = ["cryptography"]
description = """A crate for working with finite fields where the modulus is of unknown order,
typtical for RSA, Paillier, Hyperelliptic curves, etc.
"""
documentation = "https://docs.rs/unknown_order"
edition = "2018"
exclude = [
    "*.sh",
]
keywords = ["cryptography", "rsa", "bignum", "gmp", "security"]
license = "Apache-2.0 OR MIT"
name = "unknown_order"
readme = "README.md"
repository = "https://github.com/mikelodder7/unknown_order"
version = "0.5.0"

[features]
default = ["rust"]
gmp = ["hex", "rand/default", "rug"]
rust = ["glass_pumpkin", "num-bigint", "num-integer", "num-traits", "rand/default"]
wasm = ["getrandom", "wasm-bindgen"]

[dependencies]
digest = "0.9"
getrandom = { version = "0.2", features = ["js"], optional = true }
glass_pumpkin = { version = "1.5", optional = true }
hex = { version = "0.4", optional = true }
num-bigint = { version = "0.4", optional = true }
num-integer = { version = "0.1", optional = true }
num-traits = { version = "0.2", optional = true }
openssl = { version = "^0.10.41", optional = true }
rand = { version = "0.8", default-features = false  }
rug = { version = "1.16", default-features = false, features = ["integer", "rand"], optional = true }
serde = { version = "1.0", features = ["serde_derive"] }
subtle = "2.4"
wasm-bindgen = { version = "0.2", default-features = false, features = ["serde-serialize"], optional = true }
zeroize = "1.4"

[dev-dependencies]
blake2 = "0.9"
multibase = "0.9"
serde_json = "1.0"
