[package]
authors = ["Michael Lodder <redmike7@gmail.com>"]
categories = ["cryptography"]
description = """A crate for working with finite fields where the modulus is of unknown order,
typtical for RSA, Paillier, Hyperelliptic curves, etc.
"""
documentation = "https://docs.rs/unknown_order"
edition = "2018"
exclude = [
    "*.sh",
    ".git",
    ".gitignore",
]
keywords = ["cryptography", "rsa", "bignum", "gmp", "security"]
license = "Apache-2.0 OR MIT"
name = "unknown_order"
readme = "README.md"
repository = "https://github.com/mikelodder7/unknown_order"
version = "0.7.0"

[features]
default = ["alloc", "crypto"]
alloc = ["crypto-bigint/serde", "crypto-bigint/alloc", "crypto-bigint/default", "serde/alloc"]
crypto = ["crypto-bigint", "crypto-primes", "multibase", "num-traits"]
gmp = ["hex", "rand/default", "rug/num-traits", "num-traits"]
openssl = ["dep:openssl"]
rust = ["glass_pumpkin", "num-bigint", "num-integer", "num-traits", "rand/default"]
wasm = ["getrandom", "wasm-bindgen", "serde-wasm-bindgen"]

[dependencies]
crypto-bigint = { version = "0.5", features = ["zeroize"], optional = true }
crypto-primes = { version = "0.4", optional = true }
digest = "0.10"
getrandom = { version = "0.2", features = ["js"], optional = true }
glass_pumpkin = { version = "1.6", optional = true }
hex = { version = "0.4", optional = true }
multibase = { version = "0.9", default-features = false, optional = true }
num-bigint = { version = "0.4", optional = true }
num-integer = { version = "0.1", optional = true }
num-traits = { version = "0.2", optional = true }
openssl = { version = "^0.10.62", optional = true }
rand = { version = "0.8", default-features = false  }
rug = { version = "1.21", default-features = false, features = ["integer", "rand"], optional = true }
serde = { version = "1.0", features = ["serde_derive"] }
subtle = "2.5"
wasm-bindgen = { version = "0.2", default-features = false, features = ["serde-serialize"], optional = true }
zeroize = "1"
serde-wasm-bindgen = { version = "0.5", optional = true }

[dev-dependencies]
blake2 = "0.10"
multibase = "0.9"
serde_json = "1.0"
bincode = "1.3"
